Fixing white space

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -18,7 +18,7 @@ li {
 }
 
 h1 {
-    font-size: 60px;
+    font-size: 56px;
     line-height: 1.2;
     margin-bottom: 40px;
     letter-spacing: -1.5px;
@@ -90,27 +90,25 @@ p, a {
 
 header section {
     display: flex;
-    height: 100vh;
-    align-content: center;
-    align-items: center;
     gap: 30px;
-    margin-left: 50px;
-    margin-right: 50px;
+    margin-inline: 50px;
+    margin-bottom: 150px;
+}
+
+header .welcome-text {
+    flex: 3;
+}
+
+header .hero-img {
+    flex: 2;
 }
 
 header img {
     width: 100%;
-    margin: 10px;
     border-radius: 15px;
 }
 
-header section .hero-img {
-    flex: 2;
-}
 
-header section .welcome-text {
-    flex: 3;
-}
 
 header section ul {
     display: flex;
@@ -136,6 +134,17 @@ header section ul .cta {
 header section ul a:hover {
     background-color: darkgreen;
     color: black;
+}
+
+blockquote {
+    margin: 30px auto;
+    max-width: 700px;
+    padding: 20px 30px;
+    border-left: 4px solid green;
+    background-color: #e9fbe0;
+    border-radius: 0 8px 8px 0;
+    line-height: 1.6;
+    color: #2a2727;
 }
 
 #hero-section {
@@ -308,8 +317,15 @@ footer p{
     }
 
     header section {
-        margin-top: 50px;
-        height: 80vh;
+        margin-top: 100px;
+    }
+
+    h1 {
+        font-size: 35px;
+    }
+        
+    .need {
+        margin-top: 0px;
     }
 
     .steps {
@@ -336,22 +352,45 @@ footer p{
     }
 }
 
-@media (max-width: 900px) {
-    header section {
-        display: flex;
-        flex-direction: column;
-        height: 1000px;
-    }
+@media (max-width: 950px) {
 
-    header section .hero-img {
-        width: 500px
+    .need {
+        margin-top: 100px;
     }
 }
 
-@media (max-width: 700px){
+@media (max-width: 950px) {
+    header section {
+        flex-direction: column;
+        text-align: center;
+        gap: 50px;
+    }
+
+    header section img {
+        max-width: 650px;
+    }
+
+    h1 {
+        font-size: 40px;
+    }
+}
+
+@media (max-width: 800px){
+    h1 {
+        font-size: 30px;
+    }
+
+    p {
+        font-size: 16px;
+    }
+
     .nav-container {
     padding: 0;
     margin: 0;
+    }
+
+    .hero-section .text {
+        margin-top: 0px;
     }
 }
 
@@ -391,16 +430,6 @@ footer p{
 
     .last-card {
         margin-top: 700px;
-    }
-
-    header section .hero-img {
-        max-width: 350px;
-        margin: 0;
-    }
-
-    .hero-img img {
-        width: 100%;
-        margin-left: 0;
     }
 
     .last-card {
